--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,4 +1,4 @@
-.App {
+.App{
 background-color: #c7d8e2;
 text-align: center;
 display: flex;
@@ -7,4 +7,13 @@ height: "100hv";
 display: grid;
 place-items: 'center';
 
+}
+.map{
+    width: '100vw';
+height: '100vh';
+background: #6C7A89;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
 }
