--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,19 +1,17 @@
-.App{
-background-color: #c7d8e2;
-text-align: center;
-display: flex;
-justify-content: center;
-height: "100hv";
-display: grid;
-place-items: 'center';
+.App {
+    background-color: #c7d8e2;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    height: "100hv";
+    display: grid;
+    place-items: 'center';
 
 }
-.map{
-    width: '100vw';
-height: '100vh';
-background: #6C7A89;
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
+
+.map {
+    background: none;
+    position: absolute;
+    z-index: 2;
+    top: 25%
 }
